--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "antd": "^5.24.2",
+    "fs": "^0.0.1-security",
+    "gsap": "^3.12.7",
     "immer": "^10.1.1",
     "next": "^14.2.20",
     "react": "^18",
