--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "antd": "^5.24.2",
+    "framer-motion": "^12.4.10",
     "fs": "^0.0.1-security",
     "gsap": "^3.12.7",
     "immer": "^10.1.1",
