輪播-setting.json修改設定

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,5 +21,6 @@
   },
   "emmet.syntaxProfiles": {
     "javascript": "jsx"
-  }
+  },
+  "compile-hero.disable-compile-files-on-did-save-code": false
 }
