--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@
 .pnp.js
 .yarn/install-state.gz
 
+
+
+
 # testing
 /coverage
 
@@ -15,6 +18,7 @@
 
 # production
 /build
+
 
 # debug
 npm-debug.log*
@@ -55,3 +59,4 @@ yarn.lock
 /.temp
 /.html
 .vercel
+.vscode
