--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs": "^0.0.1-security",
     "gsap": "^3.12.7",
     "immer": "^10.1.1",
+    "moment-timezone": "^0.5.47",
     "motion": "^12.4.10",
     "next": "^14.2.20",
     "react": "^18",
