--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "fs": "^0.0.1-security",
     "gsap": "^3.12.7",
     "immer": "^10.1.1",
+    "leaflet": "^1.9.4",
+    "leaflet-minimap": "^3.6.1",
+    "leaflet.locatecontrol": "^0.79.0",
     "moment-timezone": "^0.5.47",
     "motion": "^12.4.10",
     "next": "^14.2.20",
