--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "antd": "^5.24.2",
     "dotenv": "^16.4.7",
+    "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.5.0",
     "fs": "^0.0.1-security",
     "gsap": "^3.12.7",
@@ -35,6 +36,7 @@
     "react-toastify": "^11.0.5",
     "rimraf": "^6.0.1",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2",
     "sweetalert2-react-content": "^5.1.0",
     "validator": "^13.12.0",
