--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.24.2",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.6.0",
+    "firebase": "^11.5.0",
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.5.0",
     "fs": "^0.0.1-security",
