--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-spring/web": "^9.7.5",
     "antd": "^5.24.2",
     "dotenv": "^16.4.7",
     "emoji-picker-react": "^4.12.2",
-    "framer-motion": "^12.5.0",
+    "framer-motion": "^12.6.2",
     "fs": "^0.0.1-security",
     "gsap": "^3.12.7",
     "immer": "^10.1.1",
@@ -29,6 +30,7 @@
     "motion": "^12.4.10",
     "mysql2": "^3.14.0",
     "next": "^14.2.20",
+    "postprocessing": "^6.37.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
@@ -39,6 +41,7 @@
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2",
     "sweetalert2-react-content": "^5.1.0",
+    "three": "^0.174.0",
     "validator": "^13.12.0",
     "zod": "^3.24.2"
   },
