--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "antd": "^5.24.2",
     "dotenv": "^16.4.7",
-    "framer-motion": "^12.6.0",
     "emoji-picker-react": "^4.12.2",
     "framer-motion": "^12.5.0",
     "fs": "^0.0.1-security",
@@ -36,6 +35,7 @@
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "rimraf": "^6.0.1",
+    "sass": "^1.86.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
     "sweetalert2": "^11.17.2",
