--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-spring/web": "^9.7.5",
+    "animejs": "^3.2.2",
     "antd": "^5.24.2",
     "dotenv": "^16.4.7",
-    "framer-motion": "^12.6.0",
-    "firebase": "^11.5.0",
     "emoji-picker-react": "^4.12.2",
+    "firebase": "^11.5.0",
     "framer-motion": "^12.6.2",
     "fs": "^0.0.1-security",
     "gsap": "^3.12.7",
