--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "react-share-social": "^0.1.60",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "rimraf": "^6.0.1",
