--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "motion": "^12.4.10",
     "mysql2": "^3.14.0",
     "next": "^14.2.20",
+    "ogl": "^1.0.11",
     "postprocessing": "^6.37.1",
     "react": "^18",
     "react-dom": "^18",
