--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -47,6 +47,10 @@
     "no-unused-vars": "warn",
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/label-has-associated-control": "off",
-    "jsx-a11y/label-has-for": "off"
+    "jsx-a11y/label-has-for": "off",
+    "jsx-a11y/no-noninteractive-element-to-interactive-role": "off",
+    "no-unused-vars": "warn"
+      
+    
   }
 }
